# agoris

agoris/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  agoris-config.in  agoris.spec.in  autogen.sh  configure.in
agoris/agoris/: Board.cc  Board.hh  Eval.cc  Eval.hh  Game.cc  Game.hh  Makefile.am  Search.cc  Search.hh  Square.cc  Square.hh  Timer.cc  Timer.hh
agoris/doc/: Doxyfile.in  Makefile.am
agoris/macros/: Makefile.am  aclocal-include.m4  agorislib.m4  autogen.sh
textchess/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.in
textchess/macros/: Makefile.am
textchess/src/: Makefile.am  textchess.cc
